<?xml version="1.0"?>
<package format="2">
  <name>ball_throwing</name>
  <version>0.0.0</version>
  <description>The basic_speed_controller package</description>

  <maintainer email="miguel.fernandez.cortizas@upm.es">Miguel Fernandez Cortizas</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend> 
	<depend>mav_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>Eigen3</depend>
	<depend>geometry_msgs</depend>

</package>
